# ICSE013A

./: CMakeLists.txt  build.sh  run.sh
include/ICSE/: _013A.hpp
src/: _013A.cpp
test/: CMakeLists.txt  ICSE.cpp
