cmake_minimum_required(VERSION 3.14)
project(ICSE)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_VERBOSE_MAKEFILE ON)

if ("${LIBRARY_INSTALL_DESTINATION}" STREQUAL "")
   set(LIBRARY_INSTALL_DESTINATION ${CMAKE_CURRENT_LIST_DIR}/host)
endif()

find_package(Boost REQUIRED)

include_directories(
   include
   ${Boost_INCLUDE_DIRS})

set(${PROJECT_NAME}_PUBLIC_INCLUDES include/ICSE/_013A.hpp)

add_library(${PROJECT_NAME}
   include/ICSE/_013A.hpp
   src/_013A.cpp)

set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${${PROJECT_NAME}_PUBLIC_INCLUDES}")

install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${LIBRARY_INSTALL_DESTINATION}/lib
   LIBRARY DESTINATION ${LIBRARY_INSTALL_DESTINATION}/lib
   RUNTIME DESTINATION ${LIBRARY_INSTALL_DESTINATION}/bin
   PUBLIC_HEADER DESTINATION ${LIBRARY_INSTALL_DESTINATION}/include/${PROJECT_NAME})

add_subdirectory(test)